# phx-ptc

./: CMakeLists.txt  README.md
ONN/: CMakeLists.txt
ONN/include/: ffn.h
ONN/src/: ffn.cpp
core/: CMakeLists.txt
core/include/core/: types.h  wave.h
docs/: fundamental_waves.md  photonic_components.md  photonic_physics.md  relu_sa.md  sigmoid_mzi.md  softmax_xgm.md  tanh_bistable.md
examples/: CMakeLists.txt  onn_ffn.cpp  photonic_neuron.cpp
photonic/: CMakeLists.txt
photonic/include/photonic/: element.h  relu_sa.h  sigmoid_mzi.h  softmax_xgm.h  tanh_bistable.h
photonic/src/: relu_sa.cpp  sigmoid_mzi.cpp  softmax_xgm.cpp  tanh_bistable.cpp
runtime/: CMakeLists.txt
runtime/src/: main.cpp
tests/: CMakeLists.txt  ffn_test.cpp  test_relu_sa.cpp  test_sigmoid_mzi.cpp  test_softmax_xgm.cpp  test_tanh_bistable.cpp  test_wave.cpp
